[package]
name = "dirwalk_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "1.0.0"
fts = "0.3.0"
futures-lite = "2.2.0"
jwalk = "0.8.1"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
